# CPP_ResNet34

./: CMakeLists.txt  main.cpp
src/: utility.cpp  utility.hpp
src/train_test/: test_imagenet_10_data.txt  test_imagenet_10_file.txt  train_imagenet_10_data.txt  train_imagenet_10_file.txt
